---
source: src/project/manifest/mod.rs
expression: "examples.into_iter().map(|example|\n                ProjectManifest::from_toml_str(&example).unwrap_err().to_string()).collect::<Vec<_>>().join(\"\\n\")"
---
TOML parse error at line 8, column 2
  |
8 | [foobar]
  |  ^^^^^^
unknown field `foobar`, expected one of `project`, `system-requirements`, `target`, `dependencies`, `host-dependencies`, `build-dependencies`, `pypi-dependencies`, `activation`, `tasks`, `feature`, `environments`, `tool`

TOML parse error at line 8, column 16
  |
8 | [target.win-64.hostdependencies]
  |                ^^^^^^^^^^^^^^^^
unknown field `hostdependencies`, expected one of `dependencies`, `host-dependencies`, `build-dependencies`, `pypi-dependencies`, `activation`, `tasks`
